// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slide /> should render correctly with transitions. 1`] = `
<Slide
  align="center center"
  presenterStyle={Object {}}
  style={Object {}}
  transition={
    Array [
      "slide",
      "spin",
    ]
  }
  viewerScaleMode={false}
>
  <SlideContainer
    background="#eee"
    className="spectacle-slide"
    innerRef={[Function]}
    styles={
      Object {
        "base": Object {},
        "presenter": Object {},
      }
    }
  >
    <div
      className="spectacle-slide css-j56w67-SlideContainer e6yds240"
    >
      <SlideContentWrapper
        align="center center"
      >
        <div
          className="css-1y1ndpg-SlideContentWrapper e6yds241"
        >
          <SlideContent
            className=" spectacle-content"
            innerRef={[Function]}
            style={Object {}}
            styles={
              Object {
                "context": Object {},
              }
            }
          >
            <div
              className=" spectacle-content css-1h5wdop-SlideContent e6yds242"
              style={Object {}}
            >
              <div>
                Slide Content
              </div>
            </div>
          </SlideContent>
        </div>
      </SlideContentWrapper>
    </div>
  </SlideContainer>
</Slide>
`;

exports[`<Slide /> should render correctly without transitions. 1`] = `
<Slide
  align="center center"
  presenterStyle={Object {}}
  style={Object {}}
  viewerScaleMode={false}
>
  <SlideContainer
    background="#eee"
    className="spectacle-slide"
    innerRef={[Function]}
    styles={
      Object {
        "base": Object {},
        "presenter": Object {},
      }
    }
  >
    <div
      className="spectacle-slide css-j56w67-SlideContainer e6yds240"
    >
      <SlideContentWrapper
        align="center center"
      >
        <div
          className="css-1y1ndpg-SlideContentWrapper e6yds241"
        >
          <SlideContent
            className=" spectacle-content"
            innerRef={[Function]}
            style={Object {}}
            styles={
              Object {
                "context": Object {},
              }
            }
          >
            <div
              className=" spectacle-content css-1h5wdop-SlideContent e6yds242"
              style={Object {}}
            >
              <div>
                Slide Content
              </div>
            </div>
          </SlideContent>
        </div>
      </SlideContentWrapper>
    </div>
  </SlideContainer>
</Slide>
`;
